--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Go
+name: build
 
 on:
   push:
@@ -33,5 +33,3 @@ jobs:
     - name: Build
       run: go build -v .
 
-    - name: Test
-      run: go test -v ./tests/*
